--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -11,8 +11,8 @@ PeDuCoML    @airh4ck      @Danila-Pechenev
 #           Старцев       Алексеев
 CreeperML   @tozarin      @arthur100500
 
-#           Панкратов     Друмов
-JaML        @i-pankrat    @DrumovMax
+            Панкратов Друмов
+YAML        @i-pankrat @DrumovMax 
 
 #           Асеев         Калашников
 SCAML       @grrrance     @foreverjun
