--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -12,7 +12,7 @@ Some_name        @airh4ck @Danila-Pechenev
 CreeperML   @tozarin @arthur100500
 
             Панкратов Друмов
-BaikaML     @i-pankrat @DrumovMax 
+YAML        @i-pankrat @DrumovMax 
 
             Асеев Калашников
 SCAML       @grrrance @foreverjun
