--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -12,7 +12,7 @@ PeDuCoML    @airh4ck      @Danila-Pechenev
 CreeperML   @tozarin      @arthur100500
 
             Панкратов Друмов
-YAML        @i-pankrat @DrumovMax 
+YaML        @i-pankrat @DrumovMax 
 
 #           Асеев         Калашников
 SCAML       @grrrance     @foreverjun
