Create type inferencer
Signed-off-by: Ilya Pankratov <i.pankratov.main@gmail.com>

--- a/YaML/lib/dune
+++ b/YaML/lib/dune
@@ -1,7 +1,8 @@
 (library
  (name yaml_lib)
  (public_name YaML.Lib)
- (modules Ast Parser)
+ (modules Ast Typetree Typedtree Inferencer Pprinttypetree)
+ ; (modules_without_implementation ast)
  (libraries base angstrom)
  (preprocess
   (pps ppx_expect ppx_deriving.show ppx_deriving.eq))
