To make the following changes: 1. Remove the ability to declare fun x -> x in if statements. 2. It is now impossible to write let in fun. 3. Change ast definition of fun
Signed-off-by: Drumov Maxim <Drumov.M.A@gmail.com>

--- a/YaML/YaML.opam
+++ b/YaML/YaML.opam
@@ -2,7 +2,7 @@
 opam-version: "2.0"
 version: "0.1"
 synopsis: "YaML"
-description: "Ya mini language ˶ᵔ ᵕ ᵔ˶"
+description: "Ya mini language"
 maintainer: ["Ilya Pankratov, Maxim Drumov"]
 authors: ["Ilya Pankratov, Maxim Drumov"]
 license: "LGPL-2.1-or-later"
