Add modules to the dune file
Signed-off-by: Ilya Pankratov <i.pankratov.main@gmail.com>

--- a/YaML/lib/dune
+++ b/YaML/lib/dune
@@ -1,8 +1,7 @@
 (library
  (name yaml_lib)
  (public_name YaML.Lib)
- (modules Ast Typetree Typedtree Inferencer Pprinttypetree)
- ; (modules_without_implementation ast)
+ (modules Ast Typetree Typedtree Inferencer Pprinttypetree Pprinttypedtree)
  (libraries base angstrom)
  (preprocess
   (pps ppx_expect ppx_deriving.show ppx_deriving.eq))
