Add tests for type inferencer and parser
Signed-off-by: Ilya Pankratov <i.pankratov.main@gmail.com>

--- a/YaML/dune
+++ b/YaML/dune
@@ -13,4 +13,4 @@
  (libraries YaML.Lib stdio))
 
 (cram
- (deps ./yaml.exe %{bin:yaml}))
+ (deps ./tests/factorial.ya ./tests/fibonacci.ya ./yaml.exe %{bin:yaml}))
