Add tests for type inference when occurs check is disabled
Signed-off-by: Ilya Pankratov <i.pankratov.main@gmail.com>

--- a/YaML/dune
+++ b/YaML/dune
@@ -17,5 +17,6 @@
   ./tests/factorial.ya
   ./tests/fibonacci.ya
   ./tests/combinators.ya
+  ./tests/occurs-check-disable.ya
   ./yaml.exe
   %{bin:yaml}))
