Change all project info from 'YaML' brand to 'JaML' brend
Signed-off-by: Ilya Pankratov <i.pankratov.main@gmail.com>

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -12,7 +12,7 @@ Some_name        @airh4ck @Danila-Pechenev
 CreeperML   @tozarin @arthur100500
 
             Панкратов Друмов
-YaML        @i-pankrat @DrumovMax 
+JaML        @i-pankrat @DrumovMax 
 
             Асеев Калашников
 SCAML       @grrrance @foreverjun
