--- a/JaML/lib/dune
+++ b/JaML/lib/dune
@@ -10,8 +10,7 @@
   Pprinttypetree
   Pprinttypedtree)
  (libraries base angstrom)
- (instrumentation
-  (backend bisect_ppx))
+ (instrumentation bisect_ppx)
  (preprocess
   (pps ppx_expect ppx_deriving.show ppx_deriving.eq))
  (inline_tests))
