--- a/JaML/dune
+++ b/JaML/dune
@@ -10,7 +10,8 @@
  (name jaml)
  (public_name jaml)
  (modules Jaml)
- (libraries JaML.Lib stdio))
+ (libraries JaML.Lib stdio)
+ (instrumentation bisect_ppx))
 
 (cram
  (deps
