--- a/JaML/lib/dune
+++ b/JaML/lib/dune
@@ -10,7 +10,8 @@
   Pprinttypetree
   Pprinttypedtree)
  (libraries base angstrom)
- (instrumentation bisect_ppx)
+ (instrumentation
+  (backend bisect_ppx))
  (preprocess
   (pps ppx_expect ppx_deriving.show ppx_deriving.eq))
  (inline_tests))
