--- a/JaML/JaML.opam
+++ b/JaML/JaML.opam
@@ -14,7 +14,7 @@ depends: [
   "angstrom"
   "ppx_inline_test" {with-test}
   "ppx_expect"
-  "ppx_deriving"
+  "ppx_deriving.show"
   "bisect_ppx"
   "ocamlformat" {build}
   "odoc" {with-doc}
