--- a/JaML/lib/dune
+++ b/JaML/lib/dune
@@ -8,7 +8,10 @@
   Typedtree
   Inferencer
   Pprinttypetree
-  Pprinttypedtree)
+  Pprinttypedtree
+  Alpha
+  Closure
+  Counter)
  (libraries base angstrom)
  (instrumentation
   (backend bisect_ppx))
