Add a new typed ast for lambda lifting.
Signed-off-by: Drumov Maxim <Drumov.M.A@gmail.com>

--- a/JaML/lib/dune
+++ b/JaML/lib/dune
@@ -12,7 +12,8 @@
   Lambdalift
   Alpha
   Closure
-  Counter)
+  Counter
+  Toplevel)
  (libraries base angstrom)
  (instrumentation
   (backend bisect_ppx))
