Add 'Anf' and 'Anfconv' to dune
Signed-off-by: Ilya Pankratov <i.pankratov.main@gmail.com>

--- a/JaML/lib/dune
+++ b/JaML/lib/dune
@@ -13,7 +13,9 @@
   Alpha
   Closure
   Counter
-  Toplevel)
+  Toplevel
+  Anf
+  Anfconv)
  (libraries base angstrom)
  (instrumentation
   (backend bisect_ppx))
