Rename 'Typetree' tp 'Ty' and 'Pprinttypetree' to 'Pprintty'
Signed-off-by: Ilya Pankratov <i.pankratov.main@gmail.com>

--- a/JaML/lib/dune
+++ b/JaML/lib/dune
@@ -4,10 +4,10 @@
  (modules
   Ast
   Parser
-  Typetree
+  Ty
   Typedtree
   Inferencer
-  Pprinttypetree
+  Pprintty
   Pprinttypedtree
   Lambdalift
   Alpha
