Implementation of lambda lifting with tuples
Signed-off-by: Maxim Drumov <Drumov.M.A@gmail.com>

--- a/JaML/lib/dune
+++ b/JaML/lib/dune
@@ -11,10 +11,10 @@
   Pprinttypedtree
   ; Pprinttopleveltree
   ; Pprintanf
-  ; Lambdalift
+  Lambdalift
   Closure
   Counter
-  ; Toplevel
+  Toplevel
   ; Anf
   ; Anfconv
   )
