Add support for tuples, take and closure in anf
Signed-off-by: Ilya Pankratov <i.pankratov.main@gmail.com>

--- a/JaML/lib/dune
+++ b/JaML/lib/dune
@@ -10,14 +10,13 @@
   Pprintty
   Pprinttypedtree
   Pprinttopleveltree
-  ; Pprintanf
+  Pprintanf
   Lambdalift
   Closure
   Counter
   Toplevel
-  ; Anf
-  ; Anfconv
-  )
+  Anf
+  Anfconv)
  (libraries base angstrom)
  (instrumentation
   (backend bisect_ppx))
