Add support for tuple in lambda lifting and closure conversion (#22)
Signed-off-by: Maxim Drumov <Drumov.M.A@gmail.com>
Signed-off-by: Ilya Pankratov <i.pankratov.main@gmail.com>
Co-authored-by: Ilya Pankratov <i.pankratov.main@gmail.com>

--- a/JaML/lib/dune
+++ b/JaML/lib/dune
@@ -9,12 +9,12 @@
   Inferencer
   Pprintty
   Pprinttypedtree
-  ; Pprinttopleveltree
+  Pprinttopleveltree
   ; Pprintanf
-  ; Lambdalift
+  Lambdalift
   Closure
   Counter
-  ; Toplevel
+  Toplevel
   ; Anf
   ; Anfconv
   )
