Rewrite lambda lifting and closure conversion using monad
Signed-off-by: Ilya Pankratov <i.pankratov.main@gmail.com>

--- a/JaML/lib/dune
+++ b/JaML/lib/dune
@@ -16,7 +16,8 @@
   Counter
   Toplevel
   Anf
-  Anfconv)
+  Anfconv
+  Monads)
  (modules_without_implementation Toplevel Anf)
  (libraries base angstrom)
  (instrumentation
