Add useful monads (#27)
Signed-off-by: Ilya Pankratov <i.pankratov.main@gmail.com>

--- a/JaML/lib/dune
+++ b/JaML/lib/dune
@@ -13,10 +13,10 @@
   Pprintanf
   Lambdalift
   Closure
-  Counter
   Toplevel
   Anf
-  Anfconv)
+  Anfconv
+  Monads)
  (modules_without_implementation Toplevel Anf)
  (libraries base angstrom)
  (instrumentation
