--- a/JaML/lib/dune
+++ b/JaML/lib/dune
@@ -13,11 +13,11 @@
   Pprintanf
   Lambdalift
   Closure
-  Toplevel
+  LL_ast
   Anf
   Anfconv
   Monads)
- (modules_without_implementation Toplevel Anf)
+ (modules_without_implementation LL_ast Anf)
  (libraries base angstrom)
  (instrumentation
   (backend bisect_ppx))
