Add tests for runtime
Signed-off-by: Ilya Pankratov <i.pankratov.main@gmail.com>

--- a/JaML/lib/dune
+++ b/JaML/lib/dune
@@ -24,3 +24,9 @@
  (preprocess
   (pps ppx_expect ppx_deriving.show ppx_deriving.eq))
  (inline_tests))
+
+(rule
+ (alias runtest)
+ (deps Makefile test_runtime.c runtime.c runtime.h)
+ (action
+  (run make run)))
