Add stdlib support at inferencer and anf conversion.
Signed-off-by: Ilya Pankratov <i.pankratov.main@gmail.com>

--- a/JaML/lib/dune
+++ b/JaML/lib/dune
@@ -16,7 +16,8 @@
   LL_ast
   Anf
   Anfconv
-  Monads)
+  Monads
+  Jamlstdlib)
  (modules_without_implementation LL_ast Anf)
  (libraries base angstrom)
  (instrumentation
