Add a compiler implementation using Llvm
Signed-off-by: Maxim Drumov <Drumov.M.A@gmail.com>

--- a/JaML/lib/dune
+++ b/JaML/lib/dune
@@ -17,9 +17,10 @@
   Anf
   Anfconv
   Monads
+  Codegen
   Jamlstdlib)
  (modules_without_implementation LL_ast Anf)
- (libraries base angstrom)
+ (libraries base angstrom llvm)
  (instrumentation
   (backend bisect_ppx))
  (preprocess
