Add the ability to select a compiler in jaml.ml. Move llvm cram tests to another directory so that they can be run through jaml.ml
Signed-off-by: Maxim Drumov <Drumov.M.A@gmail.com>

--- a/JaML/dune
+++ b/JaML/dune
@@ -21,4 +21,5 @@
   ./tests/combinators.ja
   ./tests/occurs-check-disable.ja
   ./jaml.exe
-  %{bin:jaml}))
+  %{bin:jaml}
+  lib/jaml-runtime.so))
